[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/Tileset/GameTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Nodes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/PlayersUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nodes/CrystalDisk.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/guard.tscn" type="PackedScene" id=5]
[ext_resource path="res://Nodes/PlayerCam.tscn" type="PackedScene" id=6]
[ext_resource path="res://Nodes/Door.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/water/water_animatedtex.tres" type="Texture" id=8]
[ext_resource path="res://Nodes/KingAuthur.tscn" type="PackedScene" id=9]
[ext_resource path="res://Nodes/InteractablesChar.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/Simple_Platformer/8x8/Objects/open_door.png" type="Texture" id=11]
[ext_resource path="res://Nodes/Aempleforth.gd" type="Script" id=12]
[ext_resource path="res://Nodes/AempleforthBackground.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Shake.tscn" type="PackedScene" id=14]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Npc/Mage/Npc__NpcMage_idle_0.png" type="Texture" id=15]
[ext_resource path="res://Scenes/2021-01-30-19-24-38.ogv" type="VideoStream" id=16]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 8, 8, 0, 8, 0, 6, 8, 6 )

[sub_resource type="TileSet" id=2]
0/name = "water"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]

[node name="Aempleforth" type="Node2D"]
script = ExtResource( 12 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -196609, 7, 0, -262144, 7, 0, -262143, 7, 0, -262142, 7, 0, -262141, 7, 0, -262140, 7, 0, -262139, 7, 0, -262138, 7, 0, -262137, 7, 0, -262136, 7, 0, -262135, 7, 0, -262134, 7, 0, -262133, 7, 0, -262132, 7, 0, -262131, 7, 0, -262130, 7, 0, -262129, 7, 0, -262128, 7, 0, -262127, 7, 0, -262126, 7, 0, -262125, 7, 0, -262124, 7, 0, -262123, 7, 0, -262122, 7, 0, -262121, 7, 0, -262120, 7, 0, -262119, 7, 0, -262118, 7, 0, -262117, 7, 0, -262116, 7, 0, -262115, 7, 0, -262114, 7, 0, -262113, 7, 0, -262112, 7, 0, -262111, 7, 0, -262110, 7, 0, -262109, 7, 0, -262108, 7, 0, -262107, 7, 0, -262106, 7, 0, -262105, 7, 0, -262104, 7, 0, -262103, 7, 0, -262102, 7, 0, -262101, 7, 0, -262100, 7, 0, -262099, 7, 0, -262098, 7, 0, -262097, 7, 0, -262096, 7, 0, -262095, 7, 0, -262094, 7, 0, -262093, 7, 0, -262092, 7, 0, -262091, 7, 0, -262090, 7, 0, -262089, 7, 0, -262088, 7, 0, -262087, 7, 0, -262086, 7, 0, -262085, 7, 0, -262084, 7, 0, -262083, 7, 0, -262082, 7, 0, -262081, 7, 0, -262080, 7, 0, -262079, 7, 0, -262078, 7, 0, -262077, 7, 0, -262076, 7, 0, -262075, 7, 0, -262074, 7, 0, -262073, 7, 0, -262072, 7, 0, -262071, 7, 0, -262070, 7, 0, -262069, 7, 0, -262068, 7, 0, -262067, 7, 0, -262066, 7, 0, -262065, 7, 0, -262064, 7, 0, -262063, 7, 0, -262062, 7, 0, -262061, 7, 0, -262060, 7, 0, -262059, 7, 0, -262058, 7, 0, -262057, 7, 0, -262056, 7, 0, -262055, 7, 0, -262054, 7, 0, -262053, 7, 0, -262052, 7, 0, -262051, 7, 0, -262050, 7, 0, -262049, 7, 0, -262048, 7, 0, -262047, 7, 0, -262046, 7, 0, -262045, 7, 0, -262044, 7, 0, -262043, 7, 0, -262042, 7, 0, -262041, 7, 0, -262040, 7, 0, -262039, 7, 0, -262038, 7, 0, -262037, 7, 0, -262036, 7, 0, -262035, 7, 0, -262034, 7, 0, -262033, 7, 0, -262032, 7, 0, -262031, 7, 0, -262030, 7, 0, -262029, 7, 0, -262028, 7, 0, -262027, 7, 0, -262026, 7, 0, -262025, 7, 0, -262024, 7, 0, -262023, 7, 0, -262022, 7, 0, -262021, 7, 0, -262020, 7, 0, -262019, 7, 0, -262018, 7, 0, -262017, 7, 0, -262016, 7, 0, -262015, 7, 0, -262014, 7, 0, -262013, 7, 0, -262012, 7, 0, -262011, 7, 0, -262010, 7, 0, -262009, 7, 0, -262008, 7, 0, -262007, 7, 0, -262006, 7, 0, -262005, 7, 0, -262004, 7, 0, -262003, 7, 0, -262002, 7, 0, -262001, 7, 0, -262000, 7, 0, -261999, 7, 0, -261998, 7, 0, -261997, 7, 0, -261996, 7, 0, -261995, 7, 0, -261994, 7, 0, -261993, 7, 0, -261992, 7, 0, -261991, 7, 0, -261990, 7, 0, -261989, 7, 0, -261988, 7, 0, -261987, 7, 0, -261986, 7, 0, -261985, 7, 0, -261984, 7, 0, -261983, 7, 0, -261982, 7, 0, -261981, 7, 0, -261980, 7, 0, -261979, 7, 0, -261978, 7, 0, -261977, 7, 0, -131073, 7, 0, -196441, 7, 0, -65537, 7, 0, -130905, 7, 0, -1, 7, 0, -65369, 7, 0, 65535, 7, 0, 167, 7, 0, 131071, 7, 0, 65642, 15, 4, 65644, 15, 3, 65646, 15, 6, 65648, 15, 4, 65650, 15, 4, 65652, 15, 6, 65654, 15, 4, 65656, 15, 3, 65658, 15, 4, 65660, 15, 3, 65662, 15, 4, 65664, 15, 4, 65666, 15, 4, 65703, 7, 0, 196607, 7, 0, 131178, 15, 65540, 131179, 15, 65543, 131180, 15, 65542, 131181, 15, 65543, 131182, 15, 65542, 131183, 15, 65543, 131184, 15, 65542, 131185, 15, 65543, 131186, 15, 65542, 131187, 15, 196615, 131188, 15, 65542, 131189, 15, 196615, 131190, 15, 65542, 131191, 15, 65543, 131192, 15, 65542, 131193, 15, 65543, 131194, 15, 65542, 131195, 15, 196615, 131196, 15, 65542, 131197, 15, 65543, 131198, 15, 65542, 131199, 15, 65543, 131200, 15, 65542, 131201, 15, 65543, 131202, 15, 2, 131236, 15, 6, 131239, 7, 0, 262143, 7, 0, 196714, 15, 65536, 196715, 15, 65538, 196716, 12, 0, 196717, 12, 1, 196718, 12, 1, 196719, 12, 1, 196720, 12, 1, 196721, 12, 1, 196722, 12, 1, 196723, 12, 1, 196724, 12, 1, 196725, 12, 1, 196726, 12, 1, 196727, 12, 1, 196728, 12, 1, 196729, 12, 1, 196730, 12, 1, 196731, 12, 1, 196732, 12, 1, 196733, 12, 1, 196734, 12, 1, 196735, 12, 1, 196736, 12, 2, 196737, 15, 65536, 196738, 15, 65538, 196772, 15, 0, 196773, 15, 1, 196774, 15, 2, 196775, 7, 0, 327679, 7, 0, 262250, 15, 65536, 262251, 15, 65538, 262252, 12, 65536, 262253, 12, 65537, 262254, 12, 65537, 262255, 12, 65537, 262256, 12, 65537, 262257, 12, 65537, 262258, 12, 65537, 262259, 12, 65537, 262260, 12, 65537, 262261, 12, 65537, 262262, 12, 65537, 262263, 12, 65537, 262264, 12, 65537, 262265, 12, 65537, 262266, 12, 65537, 262267, 12, 65537, 262268, 12, 65537, 262269, 12, 65537, 262270, 12, 65537, 262271, 12, 65537, 262272, 12, 65538, 262273, 15, 65536, 262274, 15, 65538, 262308, 15, 65536, 262309, 15, 65537, 262310, 15, 65538, 262311, 7, 0, 393215, 7, 0, 327786, 15, 65536, 327787, 15, 65538, 327788, 12, 65536, 327789, 12, 65537, 327790, 12, 65537, 327791, 12, 65537, 327792, 12, 65537, 327793, 12, 65537, 327794, 12, 65537, 327795, 12, 65537, 327796, 12, 65537, 327797, 12, 65537, 327798, 12, 65537, 327799, 12, 65537, 327800, 12, 65537, 327801, 12, 65537, 327802, 12, 65537, 327803, 12, 65537, 327804, 12, 65537, 327805, 12, 65537, 327806, 12, 65537, 327807, 12, 65537, 327808, 12, 65538, 327809, 15, 65536, 327810, 15, 65538, 327844, 15, 65536, 327845, 15, 65537, 327846, 15, 65538, 327847, 7, 0, 458751, 7, 0, 393322, 15, 65536, 393323, 15, 65538, 393324, 12, 65536, 393325, 12, 65537, 393326, 12, 65537, 393327, 12, 65537, 393328, 12, 65537, 393329, 12, 65537, 393330, 12, 65537, 393331, 12, 65537, 393332, 12, 65537, 393333, 12, 65537, 393334, 12, 65537, 393335, 12, 65537, 393336, 12, 65537, 393337, 12, 65537, 393338, 12, 65537, 393339, 12, 65537, 393340, 12, 65537, 393341, 12, 65537, 393342, 12, 65537, 393343, 12, 65537, 393344, 12, 65538, 393345, 15, 65536, 393346, 15, 65538, 393380, 15, 65536, 393381, 15, 65537, 393382, 15, 65538, 393383, 7, 0, 524287, 7, 0, 458858, 15, 65536, 458859, 15, 65538, 458860, 12, 131072, 458861, 12, 131073, 458862, 12, 131073, 458863, 12, 0, 458864, 12, 65537, 458865, 12, 65537, 458866, 12, 65537, 458867, 12, 65537, 458868, 12, 65537, 458869, 12, 65537, 458870, 12, 65537, 458871, 12, 65537, 458872, 12, 65537, 458873, 12, 65537, 458874, 12, 65537, 458875, 12, 65537, 458876, 12, 65537, 458877, 12, 65537, 458878, 12, 65537, 458879, 12, 65537, 458880, 12, 65538, 458881, 15, 65536, 458882, 15, 65538, 458916, 15, 65536, 458917, 15, 65537, 458918, 15, 65538, 458919, 7, 0, 589823, 7, 0, 524289, 9, 0, 524290, 9, 1, 524291, 9, 1, 524292, 9, 1, 524293, 9, 1, 524294, 9, 1, 524295, 9, 2, 524394, 15, 65536, 524395, 15, 0, 524396, 15, 65543, 524397, 15, 196615, 524398, 15, 65544, 524399, 12, 65536, 524400, 12, 65537, 524401, 12, 65537, 524402, 12, 65537, 524403, 12, 65537, 524404, 12, 65537, 524405, 12, 65537, 524406, 12, 65537, 524407, 12, 65537, 524408, 12, 65537, 524409, 12, 65537, 524410, 12, 65537, 524411, 12, 65537, 524412, 12, 65537, 524413, 12, 65537, 524414, 12, 65537, 524415, 12, 65537, 524416, 12, 65538, 524417, 15, 65536, 524418, 15, 65538, 524452, 15, 65536, 524453, 15, 65537, 524454, 15, 65538, 524455, 7, 0, 655359, 7, 0, 589825, 11, 0, 589826, 10, 0, 589827, 10, 0, 589828, 10, 0, 589829, 10, 0, 589830, 10, 0, 589831, 11, 1, 589930, 15, 131072, 589931, 15, 131074, 589932, 12, 0, 589933, 12, 1, 589934, 12, 1, 589935, 12, 0, 589936, 12, 65537, 589937, 12, 65537, 589938, 12, 65537, 589939, 12, 65537, 589940, 12, 65537, 589941, 12, 0, 589942, 12, 131073, 589943, 12, 131073, 589944, 12, 131073, 589945, 12, 131073, 589946, 12, 131073, 589947, 12, 131073, 589948, 12, 0, 589949, 12, 65537, 589950, 12, 65537, 589951, 12, 65537, 589952, 12, 65538, 589953, 15, 131072, 589954, 15, 131074, 589988, 15, 131072, 589989, 15, 131073, 589990, 15, 131074, 589991, 7, 0, 720895, 7, 0, 655361, 11, 65536, 655362, 10, 0, 655363, 10, 0, 655364, 10, 0, 655365, 10, 0, 655366, 10, 0, 655367, 10, 0, 655466, 12, 0, 655467, 12, 1, 655468, 12, 0, 655469, 12, 65537, 655470, 12, 65537, 655471, 12, 0, 655472, 12, 131073, 655473, 12, 131073, 655474, 12, 131073, 655475, 12, 131073, 655476, 12, 131073, 655477, 12, 131074, 655478, 16, 0, 655479, 16, 1, 655480, 16, 1, 655481, 16, 1, 655482, 16, 1, 655483, 16, 2, 655484, 12, 131072, 655485, 12, 0, 655486, 12, 65537, 655487, 12, 65537, 655488, 12, 0, 655489, 12, 1, 655490, 12, 2, 655524, 12, 0, 655525, 12, 1, 655526, 12, 2, 655527, 7, 0, 786431, 7, 0, 720896, 18, 0, 720897, 11, 131072, 720898, 10, 0, 720899, 10, 0, 720900, 10, 0, 720901, 10, 0, 720902, 10, 0, 720903, 10, 0, 720944, 15, 196614, 720945, 15, 196615, 720946, 15, 196615, 720947, 15, 65543, 720948, 15, 196615, 720949, 15, 196615, 720950, 15, 196615, 720951, 15, 196615, 720952, 15, 65543, 720953, 15, 65543, 720954, 15, 196615, 720955, 15, 65543, 720956, 15, 65543, 720957, 15, 196615, 720958, 15, 65543, 720959, 15, 65543, 720960, 15, 196615, 720961, 15, 65544, 720965, 15, 196614, 720966, 15, 196615, 720967, 15, 196615, 720968, 15, 65543, 720969, 15, 196615, 720970, 15, 65543, 720971, 15, 65543, 720972, 15, 65543, 720973, 15, 65543, 720974, 15, 196616, 720978, 15, 196614, 720979, 15, 196615, 720980, 15, 65544, 720985, 15, 196614, 720986, 15, 196615, 720987, 15, 65543, 720988, 15, 196615, 720989, 15, 196615, 720990, 15, 196615, 720991, 15, 196615, 720992, 15, 196615, 720993, 15, 196615, 720994, 15, 196616, 721002, 12, 131072, 721003, 12, 131073, 721004, 12, 131073, 721005, 12, 131073, 721006, 12, 131073, 721007, 12, 131074, 721008, 16, 0, 721009, 16, 1, 721010, 16, 1, 721011, 16, 1, 721012, 16, 1, 721013, 16, 1, 721014, 16, 1, 721015, 16, 1, 721016, 16, 1, 721017, 16, 1, 721018, 16, 1, 721019, 16, 1, 721020, 16, 2, 721021, 12, 131072, 721022, 12, 131073, 721023, 12, 131073, 721024, 12, 131073, 721025, 12, 131073, 721026, 12, 131074, 721036, 15, 196614, 721037, 15, 196615, 721038, 15, 196615, 721039, 15, 196615, 721040, 15, 196615, 721041, 15, 65543, 721042, 15, 196615, 721043, 15, 65543, 721044, 15, 196615, 721045, 15, 65544, 721060, 12, 131072, 721061, 12, 131073, 721062, 12, 131074, 721063, 7, 0, 851967, 7, 0, 786432, 17, 0, 786433, 17, 1, 786434, 17, 1, 786435, 17, 1, 786436, 17, 1, 786437, 17, 1, 786438, 17, 1, 786439, 17, 1, 786440, 17, 1, 786441, 17, 1, 786442, 17, 1, 786443, 17, 1, 786444, 17, 1, 786445, 17, 1, 786446, 17, 1, 786447, 17, 1, 786448, 17, 1, 786449, 17, 1, 786450, 17, 1, 786451, 17, 1, 786452, 17, 1, 786453, 17, 1, 786454, 17, 1, 786455, 17, 1, 786456, 17, 1, 786457, 17, 1, 786458, 17, 1, 786459, 17, 1, 786460, 17, 1, 786461, 17, 1, 786462, 17, 1, 786463, 17, 1, 786464, 17, 1, 786465, 17, 1, 786466, 17, 1, 786467, 17, 1, 786468, 17, 1, 786469, 17, 1, 786470, 17, 1, 786471, 17, 1, 786472, 17, 1, 786473, 17, 1, 786474, 17, 1, 786475, 17, 1, 786476, 17, 1, 786477, 17, 1, 786478, 17, 1, 786479, 17, 2, 786532, 16, 0, 786533, 16, 1, 786534, 16, 1, 786535, 16, 1, 786536, 16, 1, 786537, 16, 1, 786538, 16, 1, 786539, 16, 1, 786540, 16, 1, 786541, 16, 1, 786542, 16, 1, 786543, 16, 1, 786544, 16, 1, 786545, 16, 1, 786546, 16, 1, 786547, 16, 1, 786548, 16, 1, 786549, 16, 1, 786550, 16, 1, 786551, 16, 1, 786552, 16, 1, 786553, 16, 1, 786554, 16, 1, 786555, 16, 1, 786556, 16, 1, 786557, 16, 1, 786558, 16, 1, 786559, 16, 1, 786560, 16, 1, 786561, 16, 1, 786562, 16, 1, 786563, 16, 1, 786564, 16, 1, 786565, 16, 1, 786566, 16, 1, 786567, 16, 1, 786568, 16, 1, 786569, 16, 1, 786570, 16, 1, 786571, 16, 2, 786582, 17, 0, 786583, 17, 1, 786584, 17, 1, 786585, 17, 1, 786586, 17, 1, 786587, 17, 1, 786588, 17, 1, 786589, 17, 1, 786590, 17, 1, 786591, 17, 1, 786592, 17, 1, 786593, 17, 1, 786594, 17, 1, 786595, 17, 1, 786596, 17, 1, 786597, 17, 1, 786598, 17, 2, 786599, 7, 0, 917503, 7, 0, 851968, 7, 0, 851969, 7, 0, 851970, 7, 0, 851971, 7, 0, 851972, 7, 0, 851973, 7, 0, 851974, 7, 0, 851975, 7, 0, 851976, 7, 0, 851977, 7, 0, 851978, 7, 0, 851979, 7, 0, 851980, 7, 0, 851981, 7, 0, 851982, 7, 0, 851983, 7, 0, 851984, 7, 0, 851985, 7, 0, 851986, 7, 0, 851987, 7, 0, 851988, 7, 0, 851989, 7, 0, 851990, 7, 0, 851991, 7, 0, 851992, 7, 0, 851993, 7, 0, 851994, 7, 0, 851995, 7, 0, 851996, 7, 0, 851997, 7, 0, 851998, 7, 0, 851999, 7, 0, 852000, 7, 0, 852001, 7, 0, 852002, 7, 0, 852003, 7, 0, 852004, 7, 0, 852005, 7, 0, 852006, 7, 0, 852007, 7, 0, 852008, 7, 0, 852009, 7, 0, 852010, 7, 0, 852011, 7, 0, 852012, 7, 0, 852013, 7, 0, 852014, 7, 0, 852015, 7, 0, 852016, 7, 0, 852017, 7, 0, 852018, 7, 0, 852019, 7, 0, 852020, 7, 0, 852021, 7, 0, 852022, 7, 0, 852023, 7, 0, 852024, 7, 0, 852025, 7, 0, 852026, 7, 0, 852027, 7, 0, 852028, 7, 0, 852029, 7, 0, 852030, 7, 0, 852031, 7, 0, 852032, 7, 0, 852033, 7, 0, 852034, 7, 0, 852035, 7, 0, 852036, 7, 0, 852037, 7, 0, 852038, 7, 0, 852039, 7, 0, 852040, 7, 0, 852041, 7, 0, 852042, 7, 0, 852043, 7, 0, 852044, 7, 0, 852045, 7, 0, 852046, 7, 0, 852047, 7, 0, 852048, 7, 0, 852049, 7, 0, 852050, 7, 0, 852051, 7, 0, 852052, 7, 0, 852053, 7, 0, 852054, 7, 0, 852055, 7, 0, 852056, 7, 0, 852057, 7, 0, 852058, 7, 0, 852059, 7, 0, 852060, 7, 0, 852061, 7, 0, 852062, 7, 0, 852063, 7, 0, 852064, 7, 0, 852065, 7, 0, 852066, 7, 0, 852067, 7, 0, 852068, 7, 0, 852069, 7, 0, 852070, 7, 0, 852071, 7, 0, 852072, 7, 0, 852073, 7, 0, 852074, 7, 0, 852075, 7, 0, 852076, 7, 0, 852077, 7, 0, 852078, 7, 0, 852079, 7, 0, 852080, 7, 0, 852081, 7, 0, 852082, 7, 0, 852083, 7, 0, 852084, 7, 0, 852085, 7, 0, 852086, 7, 0, 852087, 7, 0, 852088, 7, 0, 852089, 7, 0, 852090, 7, 0, 852091, 7, 0, 852092, 7, 0, 852093, 7, 0, 852094, 7, 0, 852095, 7, 0, 852096, 7, 0, 852097, 7, 0, 852098, 7, 0, 852099, 7, 0, 852100, 7, 0, 852101, 7, 0, 852102, 7, 0, 852103, 7, 0, 852104, 7, 0, 852105, 7, 0, 852106, 7, 0, 852107, 7, 0, 852108, 7, 0, 852109, 7, 0, 852110, 7, 0, 852111, 7, 0, 852112, 7, 0, 852113, 7, 0, 852114, 7, 0, 852115, 7, 0, 852116, 7, 0, 852117, 7, 0, 852118, 7, 0, 852119, 7, 0, 852120, 7, 0, 852121, 7, 0, 852122, 7, 0, 852123, 7, 0, 852124, 7, 0, 852125, 7, 0, 852126, 7, 0, 852127, 7, 0, 852128, 7, 0, 852129, 7, 0, 852130, 7, 0, 852131, 7, 0, 852132, 7, 0, 852133, 7, 0, 852134, 7, 0, 852135, 7, 0 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="ParallaxBackground" parent="." instance=ExtResource( 13 )]

[node name="PlayersUI" parent="." instance=ExtResource( 3 )]

[node name="VideoPlayer" type="VideoPlayer" parent="PlayersUI"]
pause_mode = 2
visible = false
margin_top = -0.283997
margin_right = 1280.0
margin_bottom = 719.716
rect_scale = Vector2( 0.15, 0.15 )
stream = ExtResource( 16 )
expand = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterTile" type="TileMap" parent="."]
z_index = 2
tile_set = SubResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 786480, 0, 0, 786481, 0, 0, 786482, 0, 0, 786483, 0, 0, 786484, 0, 0, 786485, 0, 0, 786486, 0, 0, 786487, 0, 0, 786488, 0, 0, 786489, 0, 0, 786490, 0, 0, 786491, 0, 0, 786492, 0, 0, 786493, 0, 0, 786494, 0, 0, 786495, 0, 0, 786496, 0, 0, 786497, 0, 0, 786498, 0, 0, 786499, 0, 0, 786500, 0, 0, 786501, 0, 0, 786502, 0, 0, 786503, 0, 0, 786504, 0, 0, 786505, 0, 0, 786506, 0, 0, 786507, 0, 0, 786508, 0, 0, 786509, 0, 0, 786510, 0, 0, 786511, 0, 0, 786512, 0, 0, 786513, 0, 0, 786514, 0, 0, 786515, 0, 0, 786516, 0, 0, 786517, 0, 0, 786518, 0, 0, 786519, 0, 0, 786520, 0, 0, 786521, 0, 0, 786522, 0, 0, 786523, 0, 0, 786524, 0, 0, 786525, 0, 0, 786526, 0, 0, 786527, 0, 0, 786528, 0, 0, 786529, 0, 0, 786530, 0, 0, 786531, 0, 0, 786572, 0, 0, 786573, 0, 0, 786574, 0, 0, 786575, 0, 0, 786576, 0, 0, 786577, 0, 0, 786578, 0, 0, 786579, 0, 0, 786580, 0, 0, 786581, 0, 0 )

[node name="Doors" type="Node2D" parent="."]

[node name="PallaceDoor1" parent="Doors" instance=ExtResource( 7 )]
position = Vector2( 840, 80 )

[node name="PallaceDoor2" parent="Doors" instance=ExtResource( 7 )]
position = Vector2( 1048, 80 )
flip_h = true

[node name="PallaceDoor3" parent="Doors" instance=ExtResource( 7 )]
position = Vector2( 1304, 80 )

[node name="MagiHouseDoor" parent="Doors" instance=ExtResource( 7 )]
position = Vector2( 64, 80 )
flip_h = true

[node name="Interactables" type="Node2D" parent="."]

[node name="guard" parent="Interactables" instance=ExtResource( 5 )]
position = Vector2( 220, 92 )
message = "Guard: Hello Magi, the king is waiting for you in the castle"

[node name="guard2" parent="Interactables" instance=ExtResource( 5 )]
position = Vector2( 928, 84 )
message = "Guard: The princess needs your help"

[node name="KingAuthur" parent="Interactables" instance=ExtResource( 9 )]
position = Vector2( 968, 74 )
message = "K.Arthur: My daughter has been kinapped by the Dard lord, save her"

[node name="InteractablesChar" parent="Interactables" instance=ExtResource( 10 )]
position = Vector2( 385, 81 )
message = "Oldman: This brigde is up high, walking won't help, jump onto it"

[node name="InteractablesChar3" parent="Interactables" instance=ExtResource( 10 )]
position = Vector2( 1110.51, 88.9999 )
message = "Oldman: Stay safe Magi, show them you Elemental powers"

[node name="InteractablesChar2" parent="Interactables" instance=ExtResource( 10 )]
position = Vector2( 1268.73, 80 )
CharSprite = ExtResource( 15 )
message = "Wandering mage: This portal require FULL mana to work"

[node name="CrystalDisk" parent="Interactables" instance=ExtResource( 4 )]
position = Vector2( 869.203, 52 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 90.716 )

[node name="Cam" parent="Player" instance=ExtResource( 6 )]

[node name="Shake" parent="Player" instance=ExtResource( 14 )]

[node name="Portal" type="Area2D" parent="."]
position = Vector2( 1288.51, 84 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
position = Vector2( 46.4381, 4.6627 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Portal"]
position = Vector2( 39.49, -4 )
texture = ExtResource( 11 )
centered = false

[node name="Sprite2" type="Sprite" parent="Portal"]
position = Vector2( 39.49, 4 )
texture = ExtResource( 11 )
centered = false
flip_v = true
[connection signal="finished" from="PlayersUI/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="body_entered" from="Interactables/CrystalDisk" to="." method="_on_CrystalDisk_body_entered"]
[connection signal="form_changed" from="Player" to="PlayersUI" method="_on_Player_form_changed"]
[connection signal="health_changed" from="Player" to="PlayersUI" method="_on_Player_health_changed"]
[connection signal="mana_changed" from="Player" to="PlayersUI" method="_on_Player_mana_changed"]
[connection signal="set_max_health" from="Player" to="PlayersUI" method="_on_Player_set_max_health"]
[connection signal="set_max_mana" from="Player" to="PlayersUI" method="_on_Player_set_max_mana"]
[connection signal="body_entered" from="Portal" to="." method="_on_Portal_body_entered"]
